--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,7 @@ input::placeholder {
 
 .progress {
     margin: 0 auto 1rem;
+    background: #e8e8e3;
 }
 
 .progress-bar {
@@ -107,7 +108,7 @@ input::placeholder {
     height: 30px;
     border: var(--border);
     border-radius: var(--radios);
-    background: #f5f5f4;
+    
 }
 
 .progress-value {
