Feat: Introduce dynamic tech cards, persistence, and management
This commit introduces several new core functionalities and code improvements:

- Dynamically renders card content based on the specific technology represented.
- Handles technology completion events and updates the progress bar accordingly.
- Enables users to add new technologies to the list via an input form.
- Implements corresponding validation for new technology input.
- Persists all application data to the browser's local storage.
- Refactors and improves overall code structure and readability.

--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ input::placeholder {
     height: 30px;
     border: var(--border);
     border-radius: var(--radios);
-    
+    transition: width .3s ease-in-out;
 }
 
 .progress-value {
