--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ body {
 
 html,
 body {
+    box-sizing: border-box;
     height: 100%;
 }
 
@@ -163,6 +164,7 @@ input::placeholder {
 }
 
 .modal.open {
+    box-sizing: inherit;
     display: block;
     position: fixed;
     top: 50px;
@@ -270,4 +272,19 @@ input::placeholder {
 .btn:hover {
     background: #fff;
     cursor: pointer;
+}
+
+@media (max-width: 700px) {
+    .form-control input,
+    .form-control textarea {
+        width: 95%;
+    }
+
+    .modal.open {
+        width: 355px;
+        max-height: 700px;
+        overflow-y: auto;
+    }
+
+
 }
